--- a/base/templates/trip/create.html
+++ b/base/templates/trip/create.html
@@ -1,5 +1,107 @@
-{% extends "base/base.html" %}
+{% extends "base/master.html" %}
 
 {% block content %}
 
+<div class="row">
+	<form class="form-horizontal" method="post">
+		<h1 class="text-center">Nova Viagem</h1>
+		<div class="form-group form-group-lg">
+			<label class="col-md-offset-2 col-md-2 control-label" for="id_name">Nome da viagem</label>
+			<div class="col-md-6">
+				<input class="form-control" type="text" id="id_name" name="nome" required>
+			</div>
+		</div>
+		<div class="form-group form-group-lg">
+			<label class="col-md-offset-2 col-md-2 control-label" for="id_partida">Local de partida</label>
+			<div class="col-md-6">
+				<input class="form-control" type="text" id="id_partida" name="partida" required>
+			</div>
+		</div>
+		<div class="form-group form-group-lg">
+			<label class="col-md-offset-2 col-md-2 control-label" for="id_chegada">Local de chegada</label>
+			<div class="col-md-6">
+				<input class="form-control" type="text" id="id_chegada" name="chegada" required>
+			</div>
+		</div>
+		<div class="form-group form-group-lg">
+			<label class="col-md-offset-2 col-md-2 control-label" for="id_data_partida">Data de partida</label>
+			<div class="col-md-6">
+				<input class="form-control" type="date" id="id_data_partida" name="data_partida" required>
+			</div>
+		</div>
+		<div class="form-group form-group-lg">
+			<label class="col-md-offset-2 col-md-2 control-label" for="id_data_chegada">Data de chegada</label>
+			<div class="col-md-6">
+				<input class="form-control" type="date" id="id_data_chegada" name="data_chegada" required>
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="col-md-offset-2 col-md-2 control-label" for="id_description">Descrição</label>
+			<div class="col-md-6">
+				<textarea class="form-control" rows="6" id="id_description" name="description"></textarea>
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="col-md-offset-4 col-md-6">
+				<button class="btn btn-lg btn-primary pull-right" type="submit">Avançar</button>	
+			</div>
+			
+		</div>
+		
+	</form>
+</div>
+{% endblock %}
+
+{% block extrajs %}
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+	<script>
+	$(document).ready(function(){
+		mapsAutocomplete($('#id_partida')[0]);
+		mapsAutocomplete($('#id_chegada')[0]);
+	});
+	var placeSearch, autocomplete;
+	var componentForm = {
+		street_number: 'short_name',
+		route: 'long_name',
+		locality: 'long_name',
+		administrative_area_level_1: 'short_name',
+		country: 'long_name',
+		postal_code: 'short_name'
+	};
+
+	function mapsAutocomplete(obj) {
+		autocomplete = new google.maps.places.Autocomplete(obj,{ types: ['geocode'] });
+		google.maps.event.addListener(autocomplete, 'place_changed', function() {
+			fillInAddress();
+		});
+	}
+	function fillInAddress() {
+		var place = autocomplete.getPlace();
+
+		for (var component in componentForm) {
+			document.getElementById(component).value = '';
+			document.getElementById(component).disabled = false;
+		}  for (var i = 0; i < place.address_components.length; i++) {
+			var addressType = place.address_components[i].types[0];
+			if (componentForm[addressType]) {
+				var val = place.address_components[i][componentForm[addressType]];
+				document.getElementById(addressType).value = val;
+			}
+		}
+	}
+	function geolocate() {
+		if (navigator.geolocation) {
+			navigator.geolocation.getCurrentPosition(function(position) {
+				var geolocation = new google.maps.LatLng(
+					position.coords.latitude, position.coords.longitude);
+				var circle = new google.maps.Circle({
+					center: geolocation,
+					radius: position.coords.accuracy
+				});
+				autocomplete.setBounds(circle.getBounds());
+			});
+		}
+	}
+
+</script>
 {% endblock %}
