--- a/base/templates/trip/create.html
+++ b/base/templates/trip/create.html
@@ -1,7 +1,5 @@
 {% extends "base/master.html" %}
 
-{% load widget_tweak %}
-
 {% block content %}
 
 <div class="row">
@@ -34,7 +32,7 @@
 		<div class="form-group form-group-lg">
 			<label class="col-md-offset-2 col-md-2 control-label" for="id_data_chegada">Data de chegada</label>
 			<div class="col-md-6">
-				<input class="form-control" type="date" id="id_data_chegada" name="data_chegada" required>
+				<input class="form-control" type="date" id="id_end_at" name="end_at" required>
 			</div>
 		</div>
 		<div class="form-group">
