--- a/base/templates/base/master.html
+++ b/base/templates/base/master.html
@@ -45,13 +45,15 @@
         </div>
       </div>
       <div class="container-fluid">
+        
           {% if messages %}
-          <ul class="messages">
+          <div class='row'>
             {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            <div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</div>
             {% endfor %}
-          </ul>
+          </div>
           {% endif %}
+
           {% block content %}
           {% endblock %}
       </div><!-- /.container -->
