--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -24,7 +24,7 @@ h2 { font-size: 25px; font-weight: bold; color: #2B3C50; }
 
 /* System */
 body.system { background: #FFF; color: #2b3e50;}
-.system .row { padding-top: 80px; }
+.system .row:first-child { padding-top: 80px; }
 .system .brand-small { height: 60px; }
 .system .navbar.navbar-default{ padding: 10px; background-color: rgb(78,93,108); }
 .system .row .box-form { max-width: 500px; margin: 0 auto; text-align: center; }
