--- a/base/templates/trip/route.html
+++ b/base/templates/trip/route.html
@@ -3,16 +3,62 @@
 
 
 {% block content %}
+
+
 <div class="row">
-    <form id="init-route">
-        <div class="col-md-4 col-md-offset-1">
+
+    <form id="init-route" class='form-horizontal' method="post" action=".">
+        {% csrf_token %}
+        <div class="form-group form-group-lg">
+            <label class="col-md-2 control-label" for="id_name">Partida</label>
+                <div class="col-md-8">
             <input type="text" id="" name="origin" class="form-control" placeholder="Endereço do ponto de partida" value="{{ trip.start_point }}">
+                </div>
         </div>
-        <div class="col-md-4">
+       <div class="form-group form-group-lg">
+        <label class="col-md-2 control-label" for="id_name">Destino</label>
+                <div class="col-md-8">
             <input type="text" id="" name="destination" class="form-control" placeholder="Endereço do ponto de chegada" value="{{ trip.end_point }}">
+            </div>
         </div>
-        <div class="col-md-1">
-            <button type="submit" class="btn btn-success">Enviar</button>
+
+       
+
+        <div class="form-group form-group-lg">
+                <label class="col-md-2 control-label" for="id_name">Dificuldade</label>
+                <div class="col-md-8">
+            <select id="id_difficult" class="form-control" name="difficult">
+            <option value="easy" selected="selected">Fácil</option>
+            <option value="medium">Médio</option>
+            <option value="hard">Difícil</option>
+            </select>
+
+                </div>
+            
+        </div>
+
+        <div class="form-group form-group-lg">
+            <label class="col-md-2 control-label" for="id_name">Pista</label>
+                <div class="col-md-8">
+                    <select id="id_track_type" class="form-control" name="track_type">
+                    <option value="group" selected="selected">Terra</option>
+                    <option value="asphalt">Asfalto</option>
+                    <option value="pave">Pavimento</option>
+                    </select>
+                 </div>
+        </div>
+
+            <input id="id_distance" class="form-control" name="distance" step="any" type="hidden">
+      
+            <input id="id_duration" class="form-control" name="duration" type="hidden">
+             
+
+            <div class="form-group form-group-lg">
+                <div class='col-md-8 col-md-offset-2'>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </div>
+            </div>
+
         </div>
     </form>
 </div>
