--- a/base/templates/trip/route.html
+++ b/base/templates/trip/route.html
@@ -10,36 +10,34 @@
     <h1> {{ trip.name }} </h1>
     <form id="init-route" class='form-horizontal' method="post" action=".">
         {% csrf_token %}
+        <input type="hidden" id="trip" value="{{ trip.id }}">
+        <input type="hidden" id="route">
         <div class="form-group form-group-lg">
-            <label class="col-md-2 control-label" for="id_name">Partida</label>
+            <label class="col-md-2 control-label" for="id_start_point">Partida</label>
                 <div class="col-md-8">
-            <input type="text" id="" name="origin" class="form-control" placeholder="Endereço do ponto de partida" value="{{ trip.start_point }}">
+            <input type="text" id="id_start_point" name="origin" class="form-control" placeholder="Endereço do ponto de partida" value="{{ trip.start_point }}">
                 </div>
         </div>
        <div class="form-group form-group-lg">
         <label class="col-md-2 control-label" for="id_name">Destino</label>
                 <div class="col-md-8">
-            <input type="text" id="" name="destination" class="form-control" placeholder="Endereço do ponto de chegada" value="{{ trip.end_point }}">
+            <input type="text" id="id_destination" name="destination" class="form-control" placeholder="Endereço do ponto de chegada" value="{{ trip.end_point }}">
             </div>
         </div>
-
-       
-
         <div class="form-group form-group-lg">
-                <label class="col-md-2 control-label" for="id_name">Dificuldade</label>
+                <label class="col-md-2 control-label" for="id_difficult">Dificuldade</label>
                 <div class="col-md-8">
             <select id="id_difficult" class="form-control" name="difficult">
             <option value="easy" selected="selected">Fácil</option>
             <option value="medium">Médio</option>
             <option value="hard">Difícil</option>
             </select>
+            </div>
 
-                </div>
-            
         </div>
 
         <div class="form-group form-group-lg">
-            <label class="col-md-2 control-label" for="id_name">Pista</label>
+            <label class="col-md-2 control-label" for="id_track_type">Pista</label>
                 <div class="col-md-8">
                     <select id="id_track_type" class="form-control" name="track_type">
                     <option value="group" selected="selected">Terra</option>
@@ -48,11 +46,6 @@
                     </select>
                  </div>
         </div>
-
-            <input id="id_distance" class="form-control" name="distance" step="any" type="hidden">
-      
-            <input id="id_duration" class="form-control" name="duration" type="hidden">
-             
 
             <div class="form-group form-group-lg">
                 <div class='col-md-8 col-md-offset-2'>
@@ -65,15 +58,6 @@
 </div>
 <div class="row" style='padding-top: 10px;'>
     <div id="map_canvas" style="width:100%; height:500px"></div>
-    <table id="points" class="table">
-        <thead>
-            <th>Nome</th>
-            <th>Distância</th>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
-
     <div class='col-md-8 col-md-offset-2'>
 
         <hr>
@@ -93,26 +77,8 @@
             }
         </style>
 
-        <table class='table table-bordered foo'>
-            <tr>
-                <td>Parada A</td>
-                <td>100km</td>
-            </tr>
-
-            <tr>
-                <td>Parada B</td>
-                <td>127km</td>
-            </tr>
-
-            <tr>
-                <td>Parada C</td>
-                <td>140km</td>
-            </tr>
-
-            <tr>
-               <td>Parada D</td>
-               <td>200km</td>
-            </tr>
+        <table class='table table-bordered foo' id="points">
+            <tbody></tbody>
         </table>
     </div>
 
