--- a/base/templates/base/master.html
+++ b/base/templates/base/master.html
@@ -38,7 +38,7 @@
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav pull-right">
               <li><a href="{% url 'profile' %}">Perfil</a></li>
-              <li><a href="{% url 'index' %}">Roteiros</a></li>
+              <li><a href="{% url 'trip_list' %}">Roteiros</a></li>
               <li><a href="{% url 'groups' %}">Grupos</a></li>
               <li><a href="{% url 'django.contrib.auth.views.logout_then_login' %}">Logout</a></li>
             </ul>
