--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -4,6 +4,7 @@
 {% block content %}
 <div class='row'>
 	<div class='col-md-8 col-md-offset-2'>
+		<div class='col-md-6'>
 	<h1>Meus Grupos</h1>
 	 {% if object_list %}
 		<ul class="collection">
@@ -16,7 +17,9 @@
 				Você ainda não está participando de nenhum grupo.
 			</span>		
 	{% endif %}
+		</div>
 
+		<div class='col-md-6'>
 		<h1>Grupos Públicos</h1>
 		{% if public_groups %}
 			<ul>
@@ -27,8 +30,11 @@
 		{% else %}
 			<p>Não existem grupos públicos disponíveis no momento.</p>
 		{% endif %}
+		</div>
 
-		<a href="{% url 'group_create' %}" class="teal-text accent-1">Clique aqui para criar um grupo.</a>
+		<div class='row'>
+			<a href="{% url 'group_create' %}" class="teal-text accent-1">Clique aqui para criar um grupo.</a>
+		</div>
 	</div>
 <div>
 {% endblock %}
