--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -14,7 +14,7 @@
 			{% if object.group_access_set.all %}
 				<ul>
 					{% for each in object.group_access_set.all %}
-						<li><a>x {{ each.user.userprofile.name }}</a></li>	
+						<li><a>{{ each.user.userprofile.name }}</a></li>	
 					{% endfor %}
 				</ul>
 			{% else %}
