--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -9,6 +9,13 @@
 	<small>Grupo {% if object.is_public %}Público{% else %}Privado{% endif %}</small>
 	<p>Grupo criado por {{ object.owner.userprofile.name }}</p>
 
+	<div class="g-plusone" data-annotation="inline" data-width="120"></div><br>
+	<a href="https://twitter.com/share" class="twitter-share-button" data-lang="pt" data-size="medium" data-hashtags="ufsm">Tweetar</a><br/>
+	<div class="fb-like" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+	<div id="fb-root"></div>
+
+
+
 	<div class="col-md-6">
 		<h2>Membros:</h2>
 			{% if object.group_access_set.all %}
@@ -50,4 +57,23 @@
 
 	</div>
 </div>
+{% endblock %}
+
+{% block extrajs %}
+
+	<script>(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/pt_BR/all.js#xfbml=1&appId=268350933326804";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
+
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+<script type="text/javascript" async defer src="https://apis.google.com/js/platform.js?publisherid=105592117570270546246"></script>
+
+
 {% endblock %}
