--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -5,10 +5,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="{% block description %}Esqueleto do Projeto{% endblock %}">
-	<meta name="author" content="{% block author %}Ikke/14{% endblock %}">
+	<meta name="description" content="{% block description %}MotoTRIP - Share new Roads{% endblock %}">
+	<meta name="author" content="{% block author %}MotoTrip - #hackinpoa{% endblock %}">
 
-	<title>{% block title %}Início{% endblock %} - Projeto</title>
+	<title>{% block title %}Login{% endblock %} - MotoTrip</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
