--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -41,7 +41,7 @@
           <ul class="nav navbar-nav pull-right">
           {% if user.is_authenticated %}
               <li><a href="{% url 'profile' %}">Perfil</a></li>
-              <li><a href="{% url 'index' %}">Roteiros</a></li>
+              <li><a href="{% url 'trip_list' %}">Roteiros</a></li>
               <li><a href="{% url 'groups' %}">Grupos</a></li>
               <li><a href="{% url 'django.contrib.auth.views.logout_then_login' %}">Logout</a></li>
 			    {% else %}
